--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8191
+spring: 
+  cloud:
+    cloud: 
+     server:
+      git:
+        uri: https://github.com/sankhagit/spring-cloud-config-store
+        search-paths: 
+          - '*service'
