--- a/service-config/profile-service/profile-prod.yml
+++ b/service-config/profile-service/profile-prod.yml
@@ -4,7 +4,7 @@ server:
 security:
   oauth2:
     resource:
-      token-info-uri: localhost:9191/oauth/check_token
+      token-info-uri: http://localhost:9191/oauth/check_token
     client:
       client-id: mobile
       client-secret: pin     
